--- a/OpenMind/OpenMind/Base.lproj/Main.storyboard
+++ b/OpenMind/OpenMind/Base.lproj/Main.storyboard
@@ -1,33 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="N6V-Xv-RlC">
-    <device id="retina4_0" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="N6V-Xv-RlC">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
+        <!--Login-->
         <scene sceneID="DVz-yY-K95">
             <objects>
-                <viewController id="N6V-Xv-RlC" customClass="SignInViewController" customModule="OpenMind" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="N6V-Xv-RlC" userLabel="Login" customClass="SignInViewController" customModule="OpenMind" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="fR3-vW-CAq"/>
                         <viewControllerLayoutGuide type="bottom" id="Ofo-RF-YRh"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="2r2-J0-d42">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h1m-bM-yNB">
+                                <rect key="frame" x="156" y="110" width="62" height="34"/>
+                                <attributedString key="attributedText">
+                                    <fragment content="Login">
+                                        <attributes>
+                                            <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <font key="NSFont" size="30" name="AvenirNextCondensed-Regular"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="h1m-bM-yNB" firstAttribute="top" secondItem="fR3-vW-CAq" secondAttribute="bottom" constant="90" id="UEJ-oN-M7j"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="h1m-bM-yNB" secondAttribute="trailing" constant="141" id="bjT-mJ-sII"/>
+                            <constraint firstItem="h1m-bM-yNB" firstAttribute="leading" secondItem="2r2-J0-d42" secondAttribute="leadingMargin" constant="140" id="zAi-Ka-Tmg"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="L1K-eE-O1j"/>
                     <navigationItem key="navigationItem" id="6K5-V6-vUe"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CJL-D5-z5g" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3482" y="-1084"/>
+            <point key="canvasLocation" x="-3482.4000000000001" y="-1084.4077961019491"/>
         </scene>
         <!--Home-->
         <scene sceneID="hNz-n2-bh7">
@@ -38,7 +58,7 @@
                         <viewControllerLayoutGuide type="bottom" id="4ug-Mw-9AY"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="tsR-hK-woN">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
@@ -57,7 +77,7 @@
                         <viewControllerLayoutGuide type="bottom" id="Djb-ko-YwX"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="QS5-Rx-YEW">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
@@ -76,7 +96,7 @@
                         <viewControllerLayoutGuide type="bottom" id="Uqd-Yj-Zut"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="BGG-RE-LAL">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -95,7 +115,7 @@
                         <viewControllerLayoutGuide type="bottom" id="wfq-eb-2Uo"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="NRB-cz-8Ns">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -114,7 +134,7 @@
                         <viewControllerLayoutGuide type="bottom" id="c5H-nQ-C7j"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="mgX-iC-ld9">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
